# LRO_DVA_SPK

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
config/: vantage.example.yaml
docs/: API_ARMY_VANTAGE.md  DEPLOYMENT_AND_SECURITY.md  ONLINE.md  TESTING_STRATEGY.md
examples/: api_upload.curl.sh  extract_example.py  ingestion_export_preview.txt  split_pdf_max_bytes.py
scripts/: check_mac_prereqs.sh  recreate_venv.sh  run_portal_txt_for_vantage.sh
src/vantage_api/: __init__.py  __main__.py  app.py  deps.py  schemas.py  settings.py
src/vantage_api/jobs/: __init__.py  executor.py  store.py
src/vantage_api/processing/: __init__.py  batch_processor.py  runner.py
src/vantage_api/routes/: health.py  jobs.py
src/vantage_api/web/: __init__.py  app.js  index.html  styles.css
src/vantage_api/workers/: __init__.py
src/vantage_preprocess/: __init__.py  __main__.py  bootstrap.py  cli.py  config.py  logging_config.py
src/vantage_preprocess/chunking/: __init__.py  config.py  engine.py  merge_split.py  overlap.py  strategies.py  validate.py  words.py
src/vantage_preprocess/classification/: __init__.py  base.py  heuristic.py  ml_stub.py  models.py  structured.py
src/vantage_preprocess/export/: __init__.py  base_exporter.py  csv_export.py  csv_exporter.py  excel.py  ingestion_record.py  jsonl.py  jsonl_exporter.py  preview.py  sanitize.py  (+3 more)
tests/: conftest.py  test_api_health.py  test_api_jobs.py  test_batch_per_file.py  test_chunk.py  test_classification.py  test_export_ingestion.py  test_extract_docx_blocks.py  test_extract_engine_mapping.py  test_extract_pdf_native.py  test_ocr_module.py  test_quality_scoring.py  test_sections_detection.py  test_tabular_extract.py  test_txt_portal.py  test_ui_static.py  test_vantage_domain.py  test_workshop_master.py
tests/integration/: __init__.py  conftest.py  test_api_upload_and_poll.py  test_chunk_and_export_limits.py  test_extraction_ocr_mock.py  test_pipeline_file_edges.py
(+52 files in other folders)
